cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_19.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:51: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/rc2/rc2_cbc.c:51:9: Write of unused value
49.           }
50.           l2c(tout0, iv);
51.           l2c(tout1, iv);
              ^
52.       } else {
53.           c2l(iv, xor0);
